Fixed nav spacing and input styling on ios

--- a/src/style/components/_nav.scss
+++ b/src/style/components/_nav.scss
@@ -20,10 +20,10 @@
 .c-nav__link {
 	display: inline-block;
 	padding: $base-line-height 0;
-	margin-right: 20px;
+	margin-left: 20px;
 	border: none;
 
-	&:last-child {
-		margin-right: 0;
+	&:first-of-type {
+		margin-left: 0;
 	}
 }
