--- a/src/style/objects/_input.scss
+++ b/src/style/objects/_input.scss
@@ -4,7 +4,7 @@
 * @section Objects
 * @author ljd
 */
-.o-input {
+input.o-input { // We need the extra specificity to overwrite webkit default styling
 	display: block;
 	box-sizing: border-box;
 	border: none;
@@ -19,6 +19,8 @@
 
 	box-shadow: 0 2px $color-highlight;
 	outline: none;
+	@include experimental(appearance, none);
+	border-radius: 0;
 }
 @include media(tabletV) {
 	padding: $base-line-height * 2;
